--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
     "tailwind": "^4.0.0",
+    "vercel": "^44.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
